2000-07-26  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm:  Add support for multiple domains.

	* bin/mj_wwwusr:  Restructure to override Mj::Format routines
	for the help, lists, and show commands.  
	Add support for multiple domains.
	Add support for the help and changeaddr commands.

	* lib/Majordomo.pm (subscribe):  Set the matches_list variable
	if someone attempts to add the -unsubscribe alias to the list.

2000-07-25  Michael Yount <csf@moscow.com>

	* bin/mj_email, bin/mj_enqueue: Add options for new aliases
	  -c COMMAND    Issue a command (-subscribe, -unsubscribe)
	  -M            Forward message to moderators (-moderator)
	  -x SUBLIST    Post a message to an auxiliary list.
	At present, qmail support does not include auxiliary lists.
    The -moderator alias follows the same conventions as the
	-owner alias.  The auxiliary list aliases follow the same
	conventions as the resend (main list) alias.
      
	* bin/mj_queuerun: Handle altered queue file names for new aliases.
	The file names will end with a comma, followed by an auxiliary
	list name or command name or 'M' (for -moderator).
    Remove the unused qmail code.

	* bin/mj_wwwadm, bin/mj_wwwusr: Add support for latchkeys. 
	Instead of sending the password back to the client with the
	results, a temporary password is created with a limited lifetime
	(one hour by default).

	* lib/Majordomo.pm: 
	(dispatch)  Convert a latchkey into a permanent password.
	(gen_cmdline) Take into consideration messages posted to
	auxiliary lists.
	(_createlist)  Use the "aliases" setting to determine
	which aliases to use.  Include alias and sublist data
	when using the MTAConfig module.
	(reject) Include datum concerning whether or not an 
	acknowledgement was sent to the victim.
	(set, _set) Allow use of the "aux" mode to change the 
	settings for an auxiliary list.

	* lib/Mj/Access.pm (_a_forward):  Allow a posted message
	to be forwarded to a different address.
